// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LevelSelector > basically > auto > should render the proper level labels 1`] = `
"<button class="gplayer-lite-btn go-back gcore-skin-text-color">
    <span class="arrow-left-icon">/assets/icons/new/arrow-left.svg</span>
    Quality
</button>
<ul class="gear-sub-menu">
    
        <li class="current">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color gcore-skin-active" data-id="-1" id="level_selector_auto">
                <span class="check-icon">/assets/icons/new/check.svg</span>
            Auto
        </a>
    </li>
    
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="2" id="level_selector_1080">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                1080p
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="1" id="level_selector_720">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                HD
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="0" id="level_selector_360">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                360p
            </a>
        </li>
    
</ul>
"
`;

exports[`LevelSelector > basically > custom label > should render the proper level labels 1`] = `
"<button class="gplayer-lite-btn go-back gcore-skin-text-color">
    <span class="arrow-left-icon">/assets/icons/new/arrow-left.svg</span>
    Quality
</button>
<ul class="gear-sub-menu">
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="-1" id="level_selector_auto">
                <span class="check-icon">/assets/icons/new/check.svg</span>
            Auto
        </a>
    </li>
    
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="2" id="level_selector_1080">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                1080p
            </a>
        </li>
    
        <li class="current">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color gcore-skin-active" data-id="1" id="level_selector_720">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                HD
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="0" id="level_selector_360">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                360p
            </a>
        </li>
    
</ul>
"
`;

exports[`LevelSelector > basically > standard label > should render the proper level labels 1`] = `
"<button class="gplayer-lite-btn go-back gcore-skin-text-color">
    <span class="arrow-left-icon">/assets/icons/new/arrow-left.svg</span>
    Quality
</button>
<ul class="gear-sub-menu">
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="-1" id="level_selector_auto">
                <span class="check-icon">/assets/icons/new/check.svg</span>
            Auto
        </a>
    </li>
    
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="2" id="level_selector_1080">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                1080p
            </a>
        </li>
    
        <li class="">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="1" id="level_selector_720">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                HD
            </a>
        </li>
    
        <li class="current">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color gcore-skin-active" data-id="0" id="level_selector_360">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                360p
            </a>
        </li>
    
</ul>
"
`;

exports[`LevelSelector > options.restrictResolution > basically > should render the restricted quality level label 1`] = `
"<button class="gplayer-lite-btn gcore-skin-text-color gear-option">
    
    <span>Quality</span>
    <span class="gear-option_arrow-right-icon">/assets/icons/new/arrow-right.svg</span>
    <span class="gear-option_value">360p</span>
</button>
"
`;

exports[`LevelSelector > options.restrictResolution > given vertical video format levels > should recognize vertical orientation 1`] = `
"<button class="gplayer-lite-btn go-back gcore-skin-text-color">
    <span class="arrow-left-icon">/assets/icons/new/arrow-left.svg</span>
    Quality
</button>
<ul class="gear-sub-menu">
    
    
        <li class="level-disabled">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="2" id="level_selector_1080">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                1080p
            </a>
        </li>
    
        <li class="level-disabled">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="1" id="level_selector_1280">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                720p
            </a>
        </li>
    
        <li class="current">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color gcore-skin-active" data-id="0" id="level_selector_640">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                360p
            </a>
        </li>
    
</ul>
"
`;

exports[`LevelSelector > options.restrictResolution > given vertical video format levels > should recognize vertical orientation 2`] = `
"<button class="gplayer-lite-btn go-back gcore-skin-text-color">
    <span class="arrow-left-icon">/assets/icons/new/arrow-left.svg</span>
    Quality
</button>
<ul class="gear-sub-menu">
    
    
        <li class="level-disabled">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="2" id="level_selector_1080">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                1080p
            </a>
        </li>
    
        <li class="level-disabled">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color" data-id="1" id="level_selector_1280">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                720p
            </a>
        </li>
    
        <li class="current">
            <a href="#" class="gear-sub-menu_btn gcore-skin-text-color gcore-skin-active" data-id="0" id="level_selector_640">
                <span class="check-icon">/assets/icons/new/check.svg</span>
                360p
            </a>
        </li>
    
</ul>
"
`;
